Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127536

When styling a QComboBox, it always has a check-box icon even after setting the icon to none.

    XMLWordPrintable

Details

    • All
    • c2d569613 (dev), a3568a19e (dev), 7fb797202 (6.8), cd34e5c7b (6.8), 44634c58c (dev), 905dfd391 (6.8)

    Description

      When styling QComboBox, it always has a check-box icon even after setting the icon to none.

      To reproduce the issue, run the attached example project.

      Attachments

        1. combobox.png
          combobox.png
          6 kB
        2. untitled6.zip
          3 kB

        Issue Links

          For Gerrit Dashboard: QTBUG-127536
          # Subject Branch Project Status CR V

          Activity

            People

              chehrlic Christian Ehrlicher
              mahdi.belila Mehdi Belila
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: